force-app/main/default/objects/CD_Project__c/fields/Bank_Branch_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Name_and_Address__c</fullName>
    <label>Bank Branch Name and Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>