force-app/main/default/objects/CD_Project__c/fields/Bedrooms_max__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_max__c</fullName>
    <label>Bedrooms - max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>