force-app/main/default/objects/CD_Project__c/fields/Bedrooms_min__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_min__c</fullName>
    <label>Bedrooms - min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>