force-app/main/default/objects/CD_Project__c/fields/Commercial_License_No__c.field-meta.xml
<CustomField>
    <fullName>Commercial_License_No__c</fullName>
    <label>Commercial License No:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>