force-app/main/default/objects/CD_Project__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Community</label>
    <length>60</length>
    <type>Text</type>
</CustomField>