force-app/main/default/objects/CD_Project__c/fields/Developer_Account__c.field-meta.xml
<CustomField>
    <fullName>Developer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Account</label>
    <referenceTo>CloudingoAgent__AccountContact__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>