force-app/main/default/objects/CD_Project__c/fields/Developer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Developer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>