force-app/main/default/objects/CD_Project__c/fields/Developer_Logo__c.field-meta.xml
<CustomField>
    <fullName>Developer_Logo__c</fullName>
    <label>Developer Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>