force-app/main/default/objects/CD_Project__c/fields/IBAN_No__c.field-meta.xml
<CustomField>
    <fullName>IBAN_No__c</fullName>
    <label>IBAN No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>