force-app/main/default/objects/CD_Project__c/fields/Imageurl__c.field-meta.xml
<CustomField>
    <fullName>Imageurl__c</fullName>
    <label>Imageurl</label>
    <type>Url</type>
</CustomField>