force-app/main/default/objects/CD_Project__c/fields/Job_Completion__c.field-meta.xml
<CustomField>
    <fullName>Job_Completion__c</fullName>
    <label>Job Completion (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>