force-app/main/default/objects/CD_Project__c/fields/Lightning_CIF_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Lightning_CIF_Form_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://gulfsothebysinternational.my.salesforce-sites.com/Project/CreateCIF?id=&quot;&amp;Id, 
&quot;https://gulfsothebysinternational.my.salesforce-sites.com/Project/CreateCIF?id=&quot;&amp;Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning CIF Form Link</label>
    <type>Text</type>
</CustomField>