force-app/main/default/objects/CD_Project__c/fields/PageSiteURL__c.field-meta.xml
<CustomField>
    <fullName>PageSiteURL__c</fullName>
    <label>PageSiteURL</label>
    <type>Url</type>
</CustomField>