force-app/main/default/objects/CD_Project__c/fields/Price_min__c.field-meta.xml
<CustomField>
    <fullName>Price_min__c</fullName>
    <label>Price - min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>