force-app/main/default/objects/CD_Project__c/fields/Project_Admin_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Admin 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project2</relationshipName>
    <type>Lookup</type>
</CustomField>