force-app/main/default/objects/CD_Project__c/fields/Project_Admin_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Admin_Team_Email__c</fullName>
    <inlineHelpText>Fill this field only if CIF emails needs to be sent to any email address.</inlineHelpText>
    <label>Project Admin Team Email</label>
    <type>Email</type>
</CustomField>