force-app/main/default/objects/CD_Project__c/fields/Project_Approver__c.field-meta.xml
<CustomField>
    <fullName>Project_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>