force-app/main/default/objects/CD_Project__c/fields/Project_Link_Password__c.field-meta.xml
<CustomField>
    <fullName>Project_Link_Password__c</fullName>
    <label>Project Link Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>