force-app/main/default/objects/CD_Project__c/fields/Project_Rich_text_area__c.field-meta.xml
<CustomField>
    <fullName>Project_Rich_text_area__c</fullName>
    <label>Project Rich text area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>