force-app/main/default/objects/CD_Project__c/fields/Property_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>Property_Propertyfinder__c</fullName>
    <label>Property - Propertyfinder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>