force-app/main/default/objects/CD_Project__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Sharing Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Region</valueSetName>
    </valueSet>
</CustomField>