force-app/main/default/objects/CD_Project__c/fields/Sharing_Setting_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Setting_Rule__c</fullName>
    <label>Sharing Setting Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sharing_Setting_Rule</valueSetName>
    </valueSet>
</CustomField>