force-app/main/default/objects/CD_Project__c/fields/Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>Sub_Community__c</fullName>
    <label>Sub Community</label>
    <length>60</length>
    <type>Text</type>
</CustomField>