force-app/main/default/objects/CD_Project__c/fields/Total_Available_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Units__c</fullName>
    <label>Total Available Units</label>
    <summaryForeignKey>CD_Property__c.CD_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>