force-app/main/default/objects/CD_Project__c/fields/Total_Sold_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold_Units__c</fullName>
    <label>Total Sold Units</label>
    <summaryFilterItems>
        <field>CD_Property__c.Status__c</field>
        <operation>equals</operation>
        <value>Sold, Registered DLD, Commission, Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>CD_Property__c.CD_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>