force-app/main/default/objects/CD_Project__c/fields/Total_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit__c</fullName>
    <label>Total Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>