force-app/main/default/objects/CD_Project__c/fields/Total_UnSold__c.field-meta.xml
<CustomField>
    <fullName>Total_UnSold__c</fullName>
    <formula>Total_Available_Units__c  -  Total_Sold_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total UnSold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>