force-app/main/default/objects/CD_Project__c/fields/Website_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_Project_Id__c</fullName>
    <label>Website Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>