force-app/main/default/objects/CD_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Available_Units__c</columns>
    <columns>Total_Sold_Units__c</columns>
    <columns>Total_UnSold__c</columns>
    <columns>Job_Completion__c</columns>
    <columns>Project_Approver__c</columns>
    <columns>Project_CIF_Form_Link__c</columns>
    <columns>Community__c</columns>
    <columns>Property_Propertyfinder__c</columns>
    <columns>Sub_Community__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>